# Controllers/schoolSubjects.js
@@ -5,6 +5,8 @@ const takeDataAboutSchoolSubjects = require("../Functions/SchoolSubjects/takeDat
 const takeDataAboutChaptersAndTopics = require("../Functions/SchoolSubjects/takeDataAboutChaptersAndTopics");
 const checkExistsOfSubject = require("../Functions/SchoolSubjects/checkExistsOfSubject");
 const checkExistsOfChapter = require("../Functions/SchoolSubjects/checkExistsOfChapter");
+const checkExistsOfTopic = require("../Functions/SchoolSubjects/checkExistsOfTopic");
+const checkThatChapterIsAssignToTopic = require("../Functions/SchoolSubjects/checkThatChapterIsAssignToTopic");
 
 const takesAllSubjects = async (req, res) => {
   const response = {
@@ -272,7 +274,248 @@ const createsNewChapter = async (req, res) => {
   return res.status(200).json(response);
 };
 
+const createsNewTopic = async (req, res) => {
+  const response = {
+    messages: {
+      message: [],
+      error: [],
+    },
+  };
+
+  const { nameOfChapter, nameOfTopic } = req.body;
+
+  let dataFromAuth;
+
+  try {
+    jwt.verify(
+      req.token,
+      process.env.S3_SECRETKEY,
+      async (jwtError, authData) => {
+        if (jwtError) {
+          response.messages.error.push("Błąd uwierzytelniania!");
+          res.status(403).json(response);
+        } else {
+          dataFromAuth = authData;
+        }
+      }
+    );
+  } catch (err) {
+    response.messages.error.push(
+      "Nie udało się przeprowadzić procesu uwierzytelniania!"
+    );
+    return res.status(500).send(response);
+  }
+
+  try {
+    if (
+      dataFromAuth.name === process.env.S3_TEACHER_PERMISSIONS ||
+      dataFromAuth.name === process.env.S3_ADMIN_PERMISSIONS
+    ) {
+      const resultAboutChapterExist = await checkExistsOfChapter(
+        Model.Chapters,
+        nameOfChapter
+      );
+      if (resultAboutChapterExist !== false) {
+        const resultAboutTopicExist = await checkExistsOfTopic(
+          Model.Topics,
+          nameOfTopic
+        );
+        if (resultAboutTopicExist === false) {
+          const resultAboutCreateNewTopic = await Model.Topics.create({
+            name: nameOfTopic,
+            ChapterId: resultAboutChapterExist.id,
+          });
+          if (resultAboutCreateNewTopic === null) {
+            response.messages.error.push(
+              "Nie udało się dodać nowego tematu! Sprawdź wprowadzone dane!"
+            );
+            return res.status(400).json(response);
+          }
+        } else {
+          response.messages.error.push(
+            "Temat o wprowadzonej nazwie już istnieje!"
+          );
+          return res.status(400).json(response);
+        }
+      } else {
+        response.messages.error.push("Wybrany rozdział nie istnieje!");
+        return res.status(404).json(response);
+      }
+    } else {
+      response.messages.error.push(
+        "Nie posiadasz uprawnień, by móc dodać nowy temat!"
+      );
+      return res.status(400).json(response);
+    }
+  } catch (err) {
+    response.messages.message.push(
+      "Nie można przeprowadzić procesu dodawania nowego tematu!"
+    );
+    return res.status(500).json(response);
+  }
+
+  response.messages.message.push("Pomyślnie dodano nowy temat!");
+  return res.status(200).json(response);
+};
+
+const removeChapter = async (req, res) => {
+  const response = {
+    messages: {
+      message: [],
+      error: [],
+    },
+  };
+
+  const { nameOfChapter } = req.body;
+
+  try {
+    jwt.verify(
+      req.token,
+      process.env.S3_SECRETKEY,
+      async (jwtError, authData) => {
+        if (jwtError) {
+          response.messages.error.push("Błąd uwierzytelniania!");
+          res.status(403).json(response);
+        } else {
+          dataFromAuth = authData;
+        }
+      }
+    );
+  } catch (err) {
+    response.messages.error.push(
+      "Nie udało się przeprowadzić procesu uwierzytelniania!"
+    );
+    return res.status(500).send(response);
+  }
+
+  try {
+    if (
+      dataFromAuth.name === process.env.S3_TEACHER_PERMISSIONS ||
+      dataFromAuth.name === process.env.S3_ADMIN_PERMISSIONS
+    ) {
+      const resultAboutChapterExist = await checkExistsOfChapter(
+        Model.Chapters,
+        nameOfChapter
+      );
+      if (resultAboutChapterExist !== false) {
+        const resultAboutAssignChapterToTopic =
+          await checkThatChapterIsAssignToTopic(
+            Model.Topics,
+            resultAboutChapterExist
+          );
+        if (resultAboutAssignChapterToTopic !== true) {
+          const resultAboutUpdateToRemoveField = await Model.Chapters.update(
+            { toRemove: true },
+            { where: { id: resultAboutChapterExist } }
+          );
+          if (!resultAboutUpdateToRemoveField.includes(1)) {
+            response.messages.error.push(
+              "Nie udało się usunąć wybranego rozdziału!"
+            );
+            return res.status(400).json(response);
+          }
+        } else {
+          response.messages.error.push(
+            "Rozdział o wprowadzonej nazwie już istnieje!"
+          );
+          return res.status(400).json(response);
+        }
+      } else {
+        response.messages.error.push("Wybrany rozdział nie istnieje!");
+        return res.status(404).json(response);
+      }
+    } else {
+      response.messages.error.push(
+        "Nie posiadasz uprawnień, by móc usunąć wybrany rozdział!"
+      );
+      return res.status(400).json(response);
+    }
+  } catch (err) {
+    response.messages.message.push(
+      "Nie można przeprowadzić procesu usuwania rozdziału!"
+    );
+    return res.status(500).json(response);
+  }
+
+  response.messages.message.push("Pomyślnie usunięto wybrany rozdział!");
+  return res.status(200).json(response);
+};
+
+const removeTopic = async (req, res) => {
+  const response = {
+    messages: {
+      message: [],
+      error: [],
+    },
+  };
+
+  const { nameOfTopic } = req.body;
+
+  try {
+    jwt.verify(
+      req.token,
+      process.env.S3_SECRETKEY,
+      async (jwtError, authData) => {
+        if (jwtError) {
+          response.messages.error.push("Błąd uwierzytelniania!");
+          res.status(403).json(response);
+        } else {
+          dataFromAuth = authData;
+        }
+      }
+    );
+  } catch (err) {
+    response.messages.error.push(
+      "Nie udało się przeprowadzić procesu uwierzytelniania!"
+    );
+    return res.status(500).send(response);
+  }
+
+  try {
+    if (
+      dataFromAuth.name === process.env.S3_TEACHER_PERMISSIONS ||
+      dataFromAuth.name === process.env.S3_ADMIN_PERMISSIONS
+    ) {
+      const resultAboutTopicExist = await checkExistsOfTopic(
+        Model.Topics,
+        nameOfTopic
+      );
+      if (resultAboutTopicExist !== false) {
+        const resultAboutUpdateToRemoveField = await Model.Topics.update(
+          { toRemove: true },
+          { where: { id: resultAboutTopicExist } }
+        );
+        if (!resultAboutUpdateToRemoveField.includes(1)) {
+          response.messages.error.push(
+            "Nie udało się usunąć wybranego tematu!"
+          );
+          return res.status(400).json(response);
+        }
+      } else {
+        response.messages.error.push("Wybrany temat nie istnieje!");
+        return res.status(404).json(response);
+      }
+    } else {
+      response.messages.error.push(
+        "Nie posiadasz uprawnień, by móc dodać nowy temat!"
+      );
+      return res.status(400).json(response);
+    }
+  } catch (err) {
+    response.messages.message.push(
+      "Nie można przeprowadzić procesu usuwania tematu!"
+    );
+    return res.status(500).json(response);
+  }
+
+  response.messages.message.push("Pomyślnie usunięto wybrany temat!");
+  return res.status(200).json(response);
+};
+
 exports.takesAllSubjects = takesAllSubjects;
 exports.takesAllChapters = takesAllChapters;
 exports.takesAllTopics = takesAllTopics;
 exports.createsNewChapter = createsNewChapter;
+exports.createsNewTopic = createsNewTopic;
+exports.removeChapter = removeChapter;
+exports.removeTopic = removeTopic;
