# Routes/schoolSubjects.js
@@ -1,15 +1,7 @@
 const express = require("express");
-const jwt = require("jsonwebtoken");
 const { check, validationResult } = require("express-validator");
 const verifyToken = require("../Functions/Others/verifyToken");
-const Model = require("../Functions/Others/takeModels");
 const schoolSubjectsControllers = require("../Controllers/schoolSubjects");
-const checkTheChapterExists = require("../Functions/SchoolSubjects/checkExistsOfChapter");
-const checkTheTopicIsUnique = require("../Functions/SchoolSubjects/checkTheTopicIsUnique");
-const chapterToBeDeleted = require("../Functions/SchoolSubjects/chapterToBeDeleted");
-const checkChapterAssignedToTopics = require("../Functions/SchoolSubjects/checkChapterAssignedToTopics");
-const checkTheTopicExists = require("../Functions/SchoolSubjects/checkTheTopicExists");
-const topicToBeDeleted = require("../Functions/SchoolSubjects/topicToBeDeleted");
 
 const router = express.Router();
 
@@ -68,7 +60,7 @@ router.post(
       }),
   ],
   verifyToken,
-  async (req, res) => {
+  (req, res) => {
     const error = validationResult(req);
     const response = {
       validationErrors: [],
@@ -80,7 +72,7 @@ router.post(
         .map((err) => ({ [err.param]: err.msg }));
       res.status(400).json(response);
     } else {
-      await schoolSubjectsControllers.createsNewChapter(req, res);
+      schoolSubjectsControllers.createsNewChapter(req, res);
     }
   }
 );
@@ -88,7 +80,7 @@ router.post(
 router.post(
   "/topic",
   [
-    check("name_of_chapter")
+    check("nameOfChapter")
       .exists()
       .withMessage("Brak wymaganych danych!")
       .isLength({ min: 3 })
@@ -107,7 +99,7 @@ router.post(
           return value;
         }
       }),
-    check("name_of_topic")
+    check("nameOfTopic")
       .exists()
       .withMessage("Brak wymaganych danych!")
       .isLength({ min: 3 })
@@ -131,7 +123,6 @@ router.post(
   (req, res) => {
     const error = validationResult(req);
     const response = {
-      messages: {},
       validationErrors: [],
     };
 
@@ -141,84 +132,15 @@ router.post(
         .map((err) => ({ [err.param]: err.msg }));
       res.status(400).json(response);
     } else {
-      jwt.verify(
-        req.token,
-        process.env.S3_SECRETKEY,
-        async (jwtError, authData) => {
-          if (jwtError) {
-            response.messages = { error: "Błąd uwierzytelniania!" };
-            res.status(403).json(response);
-          } else {
-            const checkUser = await checkExistsOfUserEmail(
-              Model.Users,
-              authData.email
-            );
-            if (checkUser !== false) {
-              if (
-                authData.name === process.env.S3_TEACHER_PERMISSIONS ||
-                authData.name === process.env.S3_ADMIN_PERMISSIONS
-              ) {
-                const resposneAboutChapterExists = await checkTheChapterExists(
-                  Model.Chapters,
-                  req.body.name_of_chapter
-                );
-                if (resposneAboutChapterExists !== false) {
-                  const responseAboutUniquenessOfTopic =
-                    await checkTheTopicIsUnique(
-                      Model.Topics,
-                      req.body.name_of_topic
-                    );
-                  if (responseAboutUniquenessOfTopic === true) {
-                    const addNewChapter = await createNewTopic(
-                      Model.Topics,
-                      resposneAboutChapterExists,
-                      req.body.name_of_topic
-                    );
-                    if (addNewChapter !== false) {
-                      response.messages = {
-                        message: "Pomyślnie dodano nowy temat!",
-                      };
-                      res.status(201).json(response);
-                    } else {
-                      response.messages = {
-                        error:
-                          "Nie udało się dodać nowego tematu! Sprawdź wprowadzone dane.",
-                      };
-                      res.status(400).json(response);
-                    }
-                  } else {
-                    response.messages = {
-                      error: "Temat o wprowadzonej nazwie już istnieje!",
-                    };
-                    res.status(400).json(response);
-                  }
-                } else {
-                  response.messages = {
-                    error: "Wybrany rozdział nie istnieje!",
-                  };
-                  res.status(400).json(response);
-                }
-              } else {
-                response.messages = {
-                  error: "Nie posiadasz uprawnień, by móc dodać nowy temat!",
-                };
-                res.status(400).json(response);
-              }
-            } else {
-              response.messages = { error: "Użytkownik nie istnieje!" };
-              res.status(400).json(response);
-            }
-          }
-        }
-      );
+      schoolSubjectsControllers.createsNewTopic(req, res);
     }
   }
 );
 
-router.put(
+router.patch(
   "/remove-chapter",
   [
-    check("name_of_chapter")
+    check("nameOfChapter")
       .exists()
       .withMessage("Brak wymaganych danych!")
       .isLength({ min: 3 })
@@ -252,83 +174,15 @@ router.put(
         .map((err) => ({ [err.param]: err.msg }));
       res.status(400).json(response);
     } else {
-      jwt.verify(
-        req.token,
-        process.env.S3_SECRETKEY,
-        async (jwtError, authData) => {
-          if (jwtError) {
-            response.messages = { error: "Błąd uwierzytelniania!" };
-            res.status(403).json(response);
-          } else {
-            const checkUser = await checkExistsOfUserEmail(
-              Model.Users,
-              authData.email
-            );
-            if (checkUser !== false) {
-              if (
-                authData.name === process.env.S3_TEACHER_PERMISSIONS ||
-                authData.name === process.env.S3_ADMIN_PERMISSIONS
-              ) {
-                const resposneAboutChapterExists = await checkTheChapterExists(
-                  Model.Chapters,
-                  req.body.name_of_chapter
-                );
-                if (resposneAboutChapterExists !== false) {
-                  const checkChapter = await checkChapterAssignedToTopics(
-                    Model.Topics,
-                    resposneAboutChapterExists
-                  );
-                  if (checkChapter !== true) {
-                    const deleteChapter = await chapterToBeDeleted(
-                      Model.Chapters,
-                      resposneAboutChapterExists
-                    );
-                    if (deleteChapter !== false) {
-                      response.messages = {
-                        message: "Pomyślnie usunięto rozdział!",
-                      };
-                      res.status(200).json(response);
-                    } else {
-                      response.messages = {
-                        error: "Nie udało się usunąć wybranego rozdziału!",
-                      };
-
-                      res.status(400).json(response);
-                    }
-                  } else {
-                    response.messages = {
-                      error: "Rozdział posiada przypisane do siebie tematy",
-                    };
-
-                    res.status(400).json(response);
-                  }
-                } else {
-                  response.messages = {
-                    error: "Wybrany rozdział nie istnieje!",
-                  };
-                  res.status(404).json(response);
-                }
-              } else {
-                response.messages = {
-                  error: "Nie posiadasz uprawnień, by móc dodać nowy temat!",
-                };
-                res.status(400).json(response);
-              }
-            } else {
-              response.messages = { error: "Użytkownik nie istnieje!" };
-              res.status(400).json(response);
-            }
-          }
-        }
-      );
+      schoolSubjectsControllers.removeChapter(req, res);
     }
   }
 );
 
-router.put(
+router.patch(
   "/remove-topic",
   [
-    check("name_of_topic")
+    check("nameOfTopic")
       .exists()
       .withMessage("Brak wymaganych danych!")
       .isLength({ min: 3 })
@@ -362,60 +216,7 @@ router.put(
         .map((err) => ({ [err.param]: err.msg }));
       res.status(400).json(response);
     } else {
-      jwt.verify(
-        req.token,
-        process.env.S3_SECRETKEY,
-        async (jwtError, authData) => {
-          if (jwtError) {
-            response.messages = { error: "Błąd uwierzytelniania!" };
-            res.status(403).json(response);
-          } else {
-            const checkUser = await checkExistsOfUserEmail(
-              Model.Users,
-              authData.email
-            );
-            if (checkUser !== false) {
-              if (
-                authData.name === process.env.S3_TEACHER_PERMISSIONS ||
-                authData.name === process.env.S3_ADMIN_PERMISSIONS
-              ) {
-                const resposneAboutTopicExists = await checkTheTopicExists(
-                  Model.Topics,
-                  req.body.name_of_topic
-                );
-                if (resposneAboutTopicExists !== false) {
-                  const deleteTopic = await topicToBeDeleted(
-                    Model.Topics,
-                    resposneAboutTopicExists
-                  );
-                  if (deleteTopic !== false) {
-                    response.messages = {
-                      message: "Pomyślnie usunięto temat!",
-                    };
-                    res.status(200).json(response);
-                  } else {
-                    response.messages = {
-                      error: "Nie udało się usunąć wybranego tematu!",
-                    };
-                    res.status(400).json(response);
-                  }
-                } else {
-                  response.messages = { error: "Wybrany temat nie istnieje!" };
-                  res.status(404).json(response);
-                }
-              } else {
-                response.messages = {
-                  error: "Nie posiadasz uprawnień, by móc dodać nowy temat!",
-                };
-                res.status(400).json(response);
-              }
-            } else {
-              response.messages = { error: "Użytkownik nie istnieje!" };
-              res.status(400).json(response);
-            }
-          }
-        }
-      );
+      schoolSubjectsControllers.removeTopic(req, res);
     }
   }
 );
